Cache the results of mutation testing

--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,7 @@
         <configuration>
           <excludes>
             <exclude>.travis/pom-modify/*</exclude>
+            <exclude>pit-report/*</exclude>
           </excludes>
         </configuration>
       </plugin>
