--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,9 @@ jobs:
       script:
         - ./.travis/pom-modify/modify-project.sh .
         - mvn org.pitest:pitest-maven:mutationCoverage -Drat.skip -Dcheckstyle.skip
+      cache:
+        directores:
+          - pit-report/
 
 after_success:
   - mvn clean test jacoco:report coveralls:report -Ptravis-jacoco --no-transfer-progress
